cloudnova-apps/joyful-service-canary/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: joyful-service-canary
spec:
  replicas: 5
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {duration: 10s}
      - setWeight: 60
      - pause: {duration: 20s}
      - setWeight: 80
      - pause: {duration: 1m}
  selector:
    matchLabels:
      app: joyful-service-canary
  template:
    metadata:
      labels:
        app: joyful-service-canary
    spec:
      containers:
      - name: joyful-service-canary
        image: sysadminexe/joyful-canary:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: joyful-service-canary
spec:
  ports:
  - port: 5000
    targetPort: 8080
  selector:
    app: joyful-service-canary
